# Ontology_Engine-KG

./: .env.example  .gitignore  Problem_Statement.md  README.md  README_PPT.md  Sample_Queries_Output.md  main.py  pyproject.toml  requirements.txt
agents/: workflow.py
api/: deps.py  routes.py
data/: sample_events.json
db/: neo4j_client.py  postgres_client.py  vector_store.py
ingestion/: normalizer.py  text_transformer.py
models/: ontology.py  schemas.py
notebook/: experiments.ipynb
scripts/: test_run.py
services/: extraction_service.py  ingestion_service.py  insight_service.py  public_data_service.py  query_service.py  reasoning_service.py
tests/: test_api.py
utils/: config.py
