[project]
name = "ontology-engine-kg"
version = "0.1.0"
description = "AI-powered Economic and Financial Ontology Engine for India macro intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"chromadb>=1.1.0",
	"fastapi>=0.115.0",
	"langchain>=0.3.0",
	"langchain-community>=0.3.0",
	"langgraph>=0.2.0",
	"neo4j>=5.26.0",
	"pydantic-settings>=2.6.0",
	"psycopg[binary]>=3.2.0",
	"sqlalchemy>=2.0.36",
	"uvicorn>=0.32.0",
	"langchain-chroma>=1.1.0",
	"ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
	"httpx>=0.28.0",
	"pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
